crates/check_oxlint/tests/snapshots/oxlint_test__no_case_declarations.snap
---
source: crates/check_oxlint/tests/oxlint_test.rs
expression: response.to_string()
snapshot_kind: text
---
{
  "file_name": "no-case-declarations.js",
  "help": "",
  "url": "https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-case-declarations.html",
  "severity": "error",
  "code": "eslint(no-case-declarations)",
  "message": "Unexpected lexical declaration in case block.",
  "labels": [
    {
      "span": {
        "offset": 26,
        "length": 3
      },
      "loc": {
        "start": {
          "line": 3,
          "col": 3
        },
        "end": {
          "line": 3,
          "col": 6
        }
      }
    }
  ]
}
