crates/check_oxlint/tests/snapshots/oxlint_test__no_class_assign.snap
---
source: crates/check_oxlint/tests/oxlint_test.rs
expression: response.to_string()
snapshot_kind: text
---
{
  "file_name": "no-class-assign.js",
  "help": "",
  "url": "https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-class-assign.html",
  "severity": "error",
  "code": "eslint(no-class-assign)",
  "message": "Unexpected re-assignment of class A",
  "labels": [
    {
      "span": {
        "offset": 6,
        "length": 1
      },
      "loc": {
        "start": {
          "line": 1,
          "col": 7
        },
        "end": {
          "line": 1,
          "col": 8
        }
      }
    },
    {
      "span": {
        "offset": 11,
        "length": 1
      },
      "loc": {
        "start": {
          "line": 2,
          "col": 1
        },
        "end": {
          "line": 2,
          "col": 2
        }
      }
    }
  ]
}
